--- a/public/about/about.css
+++ b/public/about/about.css
@@ -1,42 +1,50 @@
 html {
-    font-family: sans-serif;
-    background-image: url("../background.jpg");
-    background-color: grey;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-    height: 100%;
+  font-family: sans-serif;
+  background-image: url("../background.jpg");
+  background-color: grey;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  height: 100%;
 }
 
 .title {
-    font-size: 100px;
+  font-size: 100px;
+}
+
+.aqua {
+  color: aqua;
 }
 
 div.titleBlock {
-    display: inline-block;
-    text-align: center;
-    width: 800px;
-    height: 120px;
-    background-color: rgba(255, 255, 255, 0.300);
+  display: inline-block;
+  text-align: center;
+  width: 800px;
+  height: 120px;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 div.lowerCentre {
-    text-align: center;
-    display: inline-block;
-    position: absolute;
-    width: 1885px;
-    height: 400px;
-    top: 18%;
-    background-color: rgba(255, 255, 255, 0.165);
+  text-align: center;
+  display: inline-block;
+  position: absolute;
+  top: 20%;
 }
 
 div.textBox {
-    padding: 10px;
-    margin: auto;
+  padding: 10px;
+  margin: auto;
+  align-self: stretch;
+  display: inline-block;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.165);
+  width: 1885px;
+  height: 400px;
+  line-height: 25px;
 }
 
 .centre {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
