--- a/public/main.css
+++ b/public/main.css
@@ -1,18 +1,32 @@
+/* ↓ REMOVE IF NOT 000WEBHOST ↓ */
+img[src="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"]
+{
+  display: none;
+}
+/*  ↑ REMOVE IF NOT 000WEBHOST ↑  */
+
 html {
-  font-family: sans-serif;
+  font-family: "Comic Sans MS";
   background-image: url("./background.jpg");
   background-color: grey;
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
   height: 100%;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 h1 {
   text-shadow: 2px 2px black;
   -webkit-text-stroke-width: 0.3px;
   -webkit-text-stroke-color: black;
-  margin: 0px;
+  margin: 2px;
 }
 
 .rightcorner {
@@ -25,7 +39,7 @@ h1 {
 }
 
 .centre {
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 50%;
   padding: 0;
@@ -36,12 +50,41 @@ h1 {
   transform: translateX(-50%) translateY(-50%);
 }
 
+@media screen and (max-width: 358px) {
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 358px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
 .large {
-  font-size: 50px;
+  font-size: 2.7vmax;
+  width: 80%;
 }
 
 div {
   text-align: center;
+  align-self: center;
+  align-content: center;
 }
 
 .verticalcentre {
@@ -51,22 +94,23 @@ div {
 .top {
   top: 0;
   padding: 0;
-  margin: 5px;
+  text-align: center;
+  margin: 5%;
 }
 
+/*****************************************/
+
 .topnav {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  color: rgb(232, 70, 70);
-  background-color: rgb(68, 0, 255);
   cursor: pointer;
-  transform: translateX(-50%) translateY(-50%);
+}
+
+.topnav .icon {
+  display: none;
 }
 
 .topnav a {
-  float: left;
   color: #f2f2f2;
+  float: left;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -77,17 +121,12 @@ div {
   background-color: rgb(0, 0, 255);
 }
 
-button {
-  border: none;
-  color: rgb(255, 255, 255);
-  background-color: rgb(185, 15, 42);
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  vertical-align: top;
+.belowcentre {
+  position: absolute;
+  top: 57%;
+}
+
+.text {
+  width: 100%;
+  font-size: 2vmax;
 }
